tests/parser/command_form/odd.m.out
In odd.m, line 5
|   wibble a' 'b c  % wibble('a b', 'c')
|          ^ error: expected NEWLINE, found IDENTIFIER instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
